Ingress/ingress-wear-watch.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-wear-watch
spec:
  rules:
  -  host: wear.my-online-store.com
     http:
       paths:
       - backend:
           servicePort: 80
           serviceName: wear-service
  -  host: watch.my-online-store.com
     http:
       paths:
       -  backend:
            serviceName: watch-service
            servicePort: 80
