Ingress/ingress-wear.watch.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-wear-watch
spec:
  rules:
  -  http:
       paths:
       - path: /wear
         backend:
           serviceName: wear-service
           servicePort: 80
       - path: /watch
         backend:
           serviceName: watch-service
           servicePort: 80
